--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,52 @@
   <version>0.0.1-SNAPSHOT</version>
   <description>Proof of Concept for a bridge from amazon echo to gira homeserver</description>
 
+  <licenses>
+    <license>
+      <name>GNU GENERAL PUBLIC LICENSE, Version 3</name>
+      <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+    </license>
+  </licenses>
+  <developers>
+    <developer>
+      <name>Frank Mueller</name>
+      <email>hotstepper13@sop-clan.com</email>
+    </developer>
+  </developers>
+  <scm>
+    <connection>scm:git:git@github.com/hotstepper13/alexa-gira-bridge.git</connection>
+    <developerConnection>scm:git:git@github.com/hotstepper13/alexa-gira-bridge.git</developerConnection>
+    <url>git@github.com/hotstepper13/alexa-gira-bridge.git</url>
+  </scm>
+
 	<properties>
 		<java.version>1.8</java.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
+      <version>4.4.4</version>
+    </dependency>
+		<dependency>
+	    <groupId>ch.qos.logback</groupId>
+	    <artifactId>logback-classic</artifactId>
+	    <version>1.0.13</version>
+		</dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.4</version>
+    </dependency>
+  </dependencies>
 
 </project>
