--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
       <artifactId>gson</artifactId>
       <version>2.2.4</version>
     </dependency>
+    <dependency>
+	    <groupId>com.sparkjava</groupId>
+	    <artifactId>spark-core</artifactId>
+	    <version>2.5.5</version>
+    </dependency>
   </dependencies>
 
 </project>
