--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ jdk:
 deploy:
   provider: releases
   api_key: $GH_TOKEN
-  file: "target/*-generated-artifacts.*"
-  file_glob: true
+  file: 
+    - "target/*-generated-artifacts.zip"
+    - "target/*-generated-artifacts.tar.gz"
   skip_cleanup: true
   on:
     tags: true
