--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
 						</goals>
 						<configuration>
 							<descriptor>src/assembly/artifact.xml</descriptor>
-							<finalName>gira-bride</finalName>
+							<finalName>gira-bridge</finalName>
 						</configuration>
 					</execution>
 				</executions>
