--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,24 @@
+sudo: required
+
 language: java
+
 jdk:
   - oraclejdk8
+
+services:
+  - docker
+
+after_success:
+  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    cd target
+    docker build -t hotstepper13/alexa-gira-bridge:latest .
+    docker push hotstepper13/alexa-gira-bridge:latest;
+    elif [ -n "$TRAVIS_TAG" ]; then
+    cd target
+    docker build -t hotstepper13/alexa-gira-bridge:$TRAVIS_TAG .
+    docker push hotstepper13/alexa-gira-bridge:$TRAVIS_TAG;
+    fi
 
 deploy:
   provider: releases
