--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,22 @@
 							</resources>
 						</configuration>
 					</execution>
+          <execution>
+            <id>prepare-docker</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/target/</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>src/main/docker</directory>
+                  <filtering>true</filtering>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
 				</executions>
 			</plugin>
 			<plugin>
