--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM anapsix/alpine-java:8u121b13_server-jre
+FROM anapsix/alpine-java:8_server-jre
 
 MAINTAINER Frank Mueller <hotstepper13@sop-clan.com>
 
@@ -12,4 +12,4 @@ ADD gira-bridge-${project.version}-jar-with-dependencies.jar /gira-bridge-${proj
 EXPOSE 4711
 EXPOSE 1900
 
-ENTRYPOINT ["/opt/jdk/jre/bin/java","-jar","/gira-bridge-${project.version}-jar-with-dependencies.jar","--homeserver-ip", "${HOMESERVER_IP}", "--homeserver-port", "${HOMESERVER_PORT}", "--token", "${TOKEN}", "--debug", "${DEBUG}"]
+ENTRYPOINT ["/opt/jdk/jre/bin/java","-jar","/gira-bridge-${project.version}-jar-with-dependencies.jar","--homeserver-ip", ${HOMESERVER_IP}, "--homeserver-port", ${HOMESERVER_PORT}, "--token", ${TOKEN}, "--debug", ${DEBUG}]
