update script to match the new variables and add output of http_ip if set

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -7,9 +7,12 @@ ADD gira-bridge-${project.version}-jar-with-dependencies.jar /gira-bridge-${proj
 #ENV HOMESERVER_IP
 #ENV HOMESERVER_PORT
 #ENV TOKEN
-#ENV DEBUG=false
+ENV DEBUG=false
+ENV ENABLE_SSL=true
+ENV HTTP_IP=""
+
 
 EXPOSE 4711
 EXPOSE 1900
 
-ENTRYPOINT /opt/jdk/jre/bin/java -jar /gira-bridge-${project.version}-jar-with-dependencies.jar --homeserver-ip ${HOMESERVER_IP} --homeserver-port ${HOMESERVER_PORT} --token ${TOKEN} --debug ${DEBUG}
+ENTRYPOINT /opt/jdk/jre/bin/java -jar /gira-bridge-${project.version}-jar-with-dependencies.jar --homeserver-ip ${HOMESERVER_IP} --homeserver-port ${HOMESERVER_PORT} --token ${TOKEN} --debug ${DEBUG} --enable-ssl ${ENABLE_SSL} --http-ip ${HTTP_IP}
