--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -4,15 +4,12 @@ MAINTAINER Frank Mueller <hotstepper13@sop-clan.com>
 
 ADD gira-bridge-${project.version}-jar-with-dependencies.jar /gira-bridge-${project.version}-jar-with-dependencies.jar
 
-#ENV HOMESERVER_IP
-#ENV HOMESERVER_PORT
-#ENV TOKEN
 ENV DEBUG=false
-ENV ENABLE_SSL=true
+ENV CONFIG_FILE=/etc/gira-bridge/configuration.json
 ENV HTTP_IP=""
 
 
 EXPOSE 4711
 EXPOSE 1900
 
-ENTRYPOINT /opt/jdk/jre/bin/java -jar /gira-bridge-${project.version}-jar-with-dependencies.jar --homeserver-ip ${HOMESERVER_IP} --homeserver-port ${HOMESERVER_PORT} --token ${TOKEN} --debug ${DEBUG} --enable-ssl ${ENABLE_SSL} --http-ip ${HTTP_IP}
+ENTRYPOINT /opt/jdk/jre/bin/java -jar /gira-bridge-${project.version}-jar-with-dependencies.jar --config-file ${CONFIG_FILE} --debug ${DEBUG}
