--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.hotstepper13.alexa</groupId>
   <artifactId>gira-bridge</artifactId>
-  <version>2.0.18-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <description>Proof of Concept for a bridge from amazon echo to gira homeserver</description>
 
   <licenses>
@@ -72,6 +72,11 @@
 	    <groupId>com.sparkjava</groupId>
 	    <artifactId>spark-core</artifactId>
 	    <version>2.7.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>log4j-over-slf4j</artifactId>
+    	<version>1.7.25</version>
     </dependency>
   </dependencies>
 
